--- a/deleteItem.html
+++ b/deleteItem.html
@@ -12,7 +12,7 @@
       <h1>Walmart</h1>
       <button class="home-btn" onclick="location.href='index.html'">Home</button>
     </div>
-    <h3>Smart Grocery Inventory Management</h3>
+    <h3>Smart Grocery Inventory Managements</h3>
     <nav>
       <button onclick="location.href='createItem.html'">Create</button>
       <button onclick="location.href='readItem.html'">Read</button>
